[copyright] allow updating on save (IDEA-265711)
explanatory comments added

GitOrigin-RevId: b8298c76d5b95c81ce56306f1851b478a6c34b85