@@ -3,6 +3,8 @@ package com.maddyhome.idea.copyright.actions;
 
 import com.intellij.codeInsight.actions.onSave.ActionOnSaveInfoBase;
 import com.intellij.copyright.CopyrightBundle;
+import com.intellij.copyright.CopyrightManager;
+import com.intellij.ide.actionsOnSave.ActionOnSaveComment;
 import com.intellij.ide.actionsOnSave.ActionOnSaveContext;
 import com.intellij.ide.actionsOnSave.ActionOnSaveInfo;
 import com.intellij.ide.actionsOnSave.ActionOnSaveInfoProvider;
@@ -13,27 +15,40 @@ import com.maddyhome.idea.copyright.ui.CopyrightProjectConfigurable;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public final class CopyrightOnSaveInfoProvider extends ActionOnSaveInfoProvider {
 
-  public static final String UPDATE_COPYRIGHT_ON_SAVE = "update.copyright.on.save";
-  public static final boolean UPDATE_COPYRIGHT_BY_DEFAULT = false;
+  private static final String UPDATE_COPYRIGHT_ON_SAVE = "update.copyright.on.save";
+  private static final boolean UPDATE_COPYRIGHT_BY_DEFAULT = false;
 
   public static boolean isUpdateCopyrightOnSaveEnabled(@NotNull Project project) {
     return PropertiesComponent.getInstance(project).getBoolean(UPDATE_COPYRIGHT_ON_SAVE, UPDATE_COPYRIGHT_BY_DEFAULT);
   }
-
   
   @Override
   protected @NotNull Collection<? extends ActionOnSaveInfo> getActionOnSaveInfos(@NotNull ActionOnSaveContext context) {
-    return Collections.singletonList(new ActionOnSaveInfoBase(context, CopyrightBundle.message("before.checkin.update.copyright"),
-                                                              UPDATE_COPYRIGHT_ON_SAVE, UPDATE_COPYRIGHT_BY_DEFAULT) {
+    return List.of(new ActionOnSaveInfoBase(context, CopyrightBundle.message("before.checkin.update.copyright"), UPDATE_COPYRIGHT_ON_SAVE, UPDATE_COPYRIGHT_BY_DEFAULT) {
       @Override
       public @NotNull List<? extends ActionLink> getActionLinks() {
         return List.of(createGoToPageInSettingsLink(CopyrightBundle.message("link.label.configure.copyright.settings"),
                                                     CopyrightProjectConfigurable.ID));
+      }
+
+      private boolean hasCopyrights() {
+        return CopyrightManager.getInstance(context.getProject()).hasAnyCopyrights();
+      }
+
+      @Override
+      public boolean isSaveActionApplicable() {
+        return hasCopyrights();
+      }
+
+      @Override
+      public ActionOnSaveComment getComment() {
+        return ActionOnSaveComment.info(CopyrightBundle.message(hasCopyrights() 
+                                                                ? "label.updates.existing.copyrights.e.g.changes.year.or.updated.notice" 
+                                                                : "label.no.copyright.configured"));
       }
     });
   }
